prevent masonry from re-arranging image tiles on 1024 width because the tiles don't align nicely

--- a/static/css/1024.css
+++ b/static/css/1024.css
@@ -6,15 +6,9 @@
     margin: 0 auto
 }
 
-.content {
-    width: 650px;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 150px;
-    border: 1px solid #000;
-
-}
+/*.content {*/
+    /*width: 650px;*/
+/*}*/
 
 .right-dock {
     width: 225px;
